fix App height to 100vh, overflow hidden

--- a/src/js/App/App.css
+++ b/src/js/App/App.css
@@ -4,6 +4,7 @@
 	max-width: 600px;
 	margin: 0 auto;
 	text-align: center;
-	
+	height: 100vh;
+	overflow: hidden;
 
 }
